rag_fe/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rag-fe-deployment
spec:
    selector:
        matchLabels:
            app: rag-fe-pod
    replicas: 2
    template:
        metadata:
            labels:
                app: rag-fe-pod
        spec:
            volumes:
                - name: nginx-config
                  configMap:
                      name: frontend-configmap
                      items:
                          - key: nginx.conf
                            path: nginx.conf
            containers:
                - name: rag-fe-container
                  image: ptatien/rag-fe:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                        name: pod-http
                  volumeMounts:
                      - name: nginx-config
                        mountPath: "/etc/nginx/conf.d/default.conf"
                        subPath: nginx.conf
                        readOnly: true
