rag_fe/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rag-fe-service
spec:
    selector:
        app: rag-fe-pod
    type: LoadBalancer
    ports:
        - name: fe-svc-http
          protocol: TCP
          port: 80
          targetPort: pod-http
