rag_fe/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: example-ingress
spec:
    ingressClassName: nginx
    rules:
        - host: rag-example.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: rag-fe-service
                            port:
                                name: fe-svc-http
